fix: z-index

--- a/front/src/view/App.css
+++ b/front/src/view/App.css
@@ -59,7 +59,6 @@ button:active {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  z-index: 99999;
 }
 
 a {
